<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_location"
        android:icon="@drawable/ic_location"
        android:title="@string/waste_bank" />

    <item
        android:id="@+id/navigation_classify"
        app:backgroundTint="@color/white"
        android:title="@string/history" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_history"
        android:title="@string/history" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />


</menu>