<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.wastebank.WasteBankActivity">

    <LinearLayout
        android:id="@+id/location_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/location_icon"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/baseline_location_on_24"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/location_icon"
            app:tint="@color/blue_primary"/>

        <LinearLayout
            android:id="@+id/text_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="8dp">

            <TextView
                android:id="@+id/location_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_location"
                android:textColor="@color/blue_primary"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/waste_bank_address"
                android:textColor="@color/green"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/grey_line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/location_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="14dp"/>

    <TextView
        android:id="@+id/nearest_waste_bank_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="18dp"
        android:layout_marginTop="14dp"
        android:text="@string/nearest_waste_bank"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/grey_line" />

    <androidx.cardview.widget.CardView
        android:id="@+id/nearest_waste_bank_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/nearest_waste_bank_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/nearest_waste_bank_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/nearest_waste_bank_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/waste_bank"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nearest_waste_bank_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/waste_bank_distance"
                android:paddingStart="16dp"
                android:paddingTop="4dp"
                android:textSize="16sp"
                android:textColor="@color/green"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:layout_marginTop="8dp"
                android:paddingBottom="16dp">

                <ImageView
                    android:id="@+id/address_icon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/baseline_my_location_24"
                    app:tint="@color/dark_grey"
                    android:contentDescription="@string/address_icon" />

                <TextView
                    android:id="@+id/nearest_waste_bank_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/waste_bank_address"
                    android:textSize="14sp"
                    android:textColor="@color/dark_grey"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/waste_banks_around_you_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/waste_bank_around"
        app:layout_constraintTop_toBottomOf="@id/nearest_waste_bank_card"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:textSize="14sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/waste_banks_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/waste_banks_around_you_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="9dp"
        tools:listitem="@layout/item_wastebank" />
</androidx.constraintlayout.widget.ConstraintLayout>
