<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:text="@string/waste_bank" />

        <TextView
            android:id="@+id/tv_item_distance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/blue_primary"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="@+id/tv_item_name"
            card_view:layout_constraintStart_toStartOf="@+id/tv_item_name"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_item_name"
            card_view:layout_constraintVertical_bias="0.0"
            tools:text="@string/waste_bank_distance" />

        <TextView
            android:id="@+id/tv_item_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/dark_grey"
            card_view:layout_constraintEnd_toEndOf="@+id/tv_item_name"
            card_view:layout_constraintStart_toStartOf="@+id/tv_item_name"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_item_distance"
            tools:text="@string/waste_bank_address" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
